src/org/javaavc/ffmpeg/swscale/LibswscaleLibrary.java

	/**
	 * Convert an 8-bit paletted frame into a frame with a color depth of 24 bits.<br>
	 * * With the palette format "ABCD", the destination frame ends up with the format "ABC".<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked24(const uint8_t*, uint8_t*, int, const uint8_t*)</code>
	 */
	void sws_convertPalette8ToPacked24(ByteBuffer src, ByteBuffer dst, int num_pixels, ByteBuffer palette);
	/**
	 * Get the AVClass for swsContext. It can be used in combination with<br>
	 * AV_OPT_SEARCH_FAKE_OBJ for examining options.<br>
	 * * @see av_opt_find().<br>
	 * Original signature : <code>AVClass* sws_get_class()</code>
	 */
	LibswscaleLibrary.AVClass sws_get_class();
	public static class AVClass extends PointerType {
		public AVClass(Pointer address) {
			super(address);
		}
		public AVClass() {
			super();
		}
	};
	public static class SwsContext extends PointerType {
		public SwsContext(Pointer address) {
			super(address);
		}
		public SwsContext() {
			super();
		}
	};
}
